docs: add 2026-02-14 patch notes and stabilize ui/footer/theme consistency

--- a/css/style.css
+++ b/css/style.css
@@ -194,11 +194,11 @@ body {
     font-weight: 600;
 }
 
-body:not(.light-mode) #theme-toggle-btn .icon-light {
+body:not(.light-mode) .theme-toggle-switch .icon-light {
     display: none;
 }
 
-body.light-mode #theme-toggle-btn .icon-dark {
+body.light-mode .theme-toggle-switch .icon-dark {
     display: none;
 }
 
